--- a/package.json
+++ b/package.json
@@ -15,10 +15,9 @@
     "@nuxt/icon": "^1.12.0",
     "@nuxt/image": "^1.10.0",
     "@nuxt/test-utils": "^3.18.0",
-    "@tailwindcss/vite": "^4.1.6",
+    "@nuxtjs/tailwindcss": "^6.14.0",
     "eslint": "^9.26.0",
     "nuxt": "^3.17.2",
-    "tailwindcss": "^4.1.6",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
   }
